fix visibility

--- a/static/expenseapp/css/style.css
+++ b/static/expenseapp/css/style.css
@@ -170,7 +170,7 @@ body {
   margin: 0;
 }
 
-.hidden {
+.hiddened {
   visibility: hidden;
 }
 
